--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     <header>
         <div class="header-content">
             <div class="profile-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                    <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
-                </svg>
+                <img src="https://i.ibb.co.com/LddXG6nR/PHOTO-2025-10-21-09-46-46.jpg" alt="Foto Profil" class="profile-photo">
             </div>
             <h1 class="site-title">Profil Mahasiswa</h1>
         </div>
