--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                 <div class="biodata-content">
                     <div class="biodata-item">
                         <div class="biodata-label">NIM:</div>
-                        <div class="biodata-value">0423087102</div>
+                        <div class="biodata-value">2024081015</div>
                     </div>
                     <div class="biodata-item">
                         <div class="biodata-label">Nama:</div>
-                        <div class="biodata-value">Augury El Rayeb, S.Kom., MMSI.</div>
+                        <div class="biodata-value">Arae Mahesa Armera</div>
                     </div>
                     <div class="biodata-item">
                         <div class="biodata-label">Agama:</div>
@@ -70,11 +70,11 @@
                     </div>
                     <div class="biodata-item">
                         <div class="biodata-label">Tanggal Lahir:</div>
-                        <div class="biodata-value">23 Agustus 1971</div>
+                        <div class="biodata-value">26 Juni 2006</div>
                     </div>
                     <div class="biodata-item">
                         <div class="biodata-label">Tempat Lahir:</div>
-                        <div class="biodata-value">Jakarta</div>
+                        <div class="biodata-value">Tangerang</div>
                     </div>
                 </div>
             </div>
@@ -87,27 +87,27 @@
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
                             <h3>Universitas Pembangunan Jaya</h3>
-                            <div class="timeline-date">2022 - Sekarang</div>
-                            <div class="timeline-desc">S1 Sistem Informasi - IPK: 3.85</div>
+                            <div class="timeline-date">2024 - Sekarang</div>
+                            <div class="timeline-desc">S1 Sistem Informasi - IPK: 3.73</div>
                             <p>Fokus pada pengembangan web, database, dan pemrograman script dengan berbagai project aplikasi web responsive</p>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
-                            <h3>SMA Negeri 1 Jakarta</h3>
+                            <h3>SMA Negeri 1 Gunungsindur</h3>
                             <div class="timeline-date">2019 - 2022</div>
                             <div class="timeline-desc">Jurusan IPA - Nilai UN: 92.5</div>
-                            <p>Aktif di ekstrakurikuler komputer dan robotika, serta menjadi ketua divisi IT OSIS</p>
+                            <p>Aktif di ekstrakurikuler dan kegiatan di SMA</p>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
-                            <h3>SMP Negeri 5 Jakarta</h3>
+                            <h3>SMP Negeri 1 Rumpin</h3>
                             <div class="timeline-date">2016 - 2019</div>
                             <div class="timeline-desc">Nilai UN: 89.0</div>
-                            <p>Juara 1 Lomba Coding tingkat Kota Jakarta tahun 2018</p>
+                            <p>Pernah Menjabat Sebagai Bendahara OSIS Dan Kegiatan Basket</p>
                         </div>
                     </div>
                 </div>
@@ -119,38 +119,38 @@
                 <div class="experience-grid">
                     <div class="experience-card">
                         <div class="card-icon">💼</div>
-                        <h3>Web Developer Intern</h3>
-                        <div class="experience-company">PT Digital Inovasi Indonesia</div>
-                        <div class="experience-date">Juni 2024 - Agustus 2024</div>
+                        <h3>Social Media Design</h3>
+                        <div class="experience-company">Magang di FTD UPJ</div>
+                        <div class="experience-date">Agustus 2025 - Sekarang</div>
                         <ul class="experience-list">
-                            <li>Mengembangkan website company profile menggunakan HTML, CSS, dan JavaScript</li>
-                            <li>Implementasi responsive design untuk berbagai perangkat</li>
-                            <li>Kolaborasi dengan tim designer dan backend developer</li>
-                            <li>Maintenance dan bug fixing aplikasi web existing</li>
+                            <li>Design berbagai kegiatan yang ada di FTD</li>
+                            <li>Mengikuti Kegiatan Panitia YUDISIUM Sebagai Pembuat Design Dari Awal-Akhir</li>
+                            <li>Kolaborasi dengan tim designer UPJ Untuk Membuat Merch Yudisium</li>
+                            <li>Mengikuti Kegiatan Panitia WISUDA Sebagai Garda Depan</li>
                         </ul>
                     </div>
                     <div class="experience-card">
                         <div class="card-icon">🎓</div>
-                        <h3>Asisten Laboratorium</h3>
-                        <div class="experience-company">Lab Sistem Informasi UPJ</div>
-                        <div class="experience-date">Februari 2024 - Sekarang</div>
+                        <h3>Magang di SIF</h3>
+                        <div class="experience-company"> Sistem Informasi UPJ</div>
+                        <div class="experience-date">September 2025 - Sekarang</div>
                         <ul class="experience-list">
-                            <li>Membantu mahasiswa dalam praktikum pemrograman web</li>
-                            <li>Membuat modul dan tutorial pembelajaran</li>
-                            <li>Mengelola sistem dan peralatan laboratorium</li>
-                            <li>Memberikan konsultasi teknis untuk project mahasiswa</li>
+                            <li>Membantu dosen dalam social media</li>
+                            <li>Membuat Konten & Video Wawancara</li>
+                            <li>Menjadi Graphic Designer</li>
+                            <li>Memberikan kontribusi terhadap Instagram SIF</li>
                         </ul>
                     </div>
                     <div class="experience-card">
                         <div class="card-icon">🏆</div>
-                        <h3>Peserta Hackathon</h3>
-                        <div class="experience-company">Jakarta Tech Fest 2024</div>
-                        <div class="experience-date">Maret 2024</div>
+                        <h3>Juara Best Presentation Seminar UMJ</h3>
+                        <div class="experience-company">Universitas Muhammadiyah Jakarta</div>
+                        <div class="experience-date">October 2025</div>
                         <ul class="experience-list">
-                            <li>Mengembangkan aplikasi manajemen tugas berbasis web</li>
-                            <li>Meraih juara 3 dari 50 tim peserta</li>
-                            <li>Kolaborasi tim dalam waktu terbatas (24 jam)</li>
-                            <li>Presentasi produk di hadapan investor dan juri</li>
+                            <li>Sebagai Peraih Best Presentation Room 5</li>
+                            <li>Melakukan Presentasi Terkait Machine Learning Sistem Data Gaji Karyawan</li>
+                            <li>Kolaborasi tim dalam waktu terbatas</li>
+                            <li>Presentasi di hadapan Dosen & Peserta International</li>
                         </ul>
                     </div>
                 </div>
@@ -237,42 +237,42 @@
                     <div class="publication-card">
                         <div class="publication-header">
                             <span class="publication-type">Project</span>
-                            <span class="publication-date">Desember 2024</span>
+                            <span class="publication-date">Agustus 2025</span>
                         </div>
-                        <h3>Sistem Informasi Perpustakaan</h3>
-                        <p>Aplikasi web untuk manajemen perpustakaan dengan fitur peminjaman, pengembalian, dan katalog buku. Dibangun menggunakan HTML, CSS, JavaScript, dan PHP dengan database MySQL.</p>
+                        <h3>Graphic Deisgner</h3>
+                        <p>Untuk Pameran JCAL Di Bintaro Jaya xChange</p>
                         <div class="publication-tags">
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>JavaScript</span>
+                            <span>Photoshop</span>
+                            <span>Canva</span>
+                            <span>Pinterest</span>
+                            <span>Pixelab</span>
+                            <span>Alight Motion</span>
+                        </div>
+                    </div>
+                    <div class="publication-card">
+                        <div class="publication-header">
+                            <span class="publication-type">PRIMA</span>
+                            <span class="publication-date">Agustus 2025</span>
+                        </div>
+                        <h3>Sebagai Anggota PDD</h3>
+                        <p>Membuat Design Lanyard,Feed,Backdrop dll</p>
+                        <div class="publication-tags">
+                            <span>Graphic Designer</span>
+                            <span>UPJ</span>
+                            <span>SIF</span>
+                        </div>
+                    </div>
+                    <div class="publication-card">
+                        <div class="publication-header">
+                            <span class="publication-type">Auto Message Tele</span>
+                            <span class="publication-date">Oktober 2025</span>
+                        </div>
+                        <h3>Tools Bot Telegram Otomatis Mengirim Pesan</h3>
+                        <p>Tool sederhana untuk yang dapat digunakan semua user mengirim pesan dengan sistem akses bot token dan nomor telepon</p>
+                        <div class="publication-tags">
+                            <span>Python</span>
+                            <span>Java Script</span>
                             <span>PHP</span>
-                            <span>MySQL</span>
-                        </div>
-                    </div>
-                    <div class="publication-card">
-                        <div class="publication-header">
-                            <span class="publication-type">Article</span>
-                            <span class="publication-date">November 2024</span>
-                        </div>
-                        <h3>Responsive Web Design Best Practices</h3>
-                        <p>Artikel tentang praktik terbaik dalam membuat website responsive, dipublikasikan di blog kampus. Membahas media queries, flexbox, dan grid system secara detail.</p>
-                        <div class="publication-tags">
-                            <span>Web Design</span>
-                            <span>Responsive</span>
-                            <span>CSS</span>
-                        </div>
-                    </div>
-                    <div class="publication-card">
-                        <div class="publication-header">
-                            <span class="publication-type">Tool</span>
-                            <span class="publication-date">Oktober 2024</span>
-                        </div>
-                        <h3>Portfolio Website Generator</h3>
-                        <p>Tool sederhana untuk generate template portfolio website. User dapat customize warna, layout, dan konten melalui form input dengan preview real-time.</p>
-                        <div class="publication-tags">
-                            <span>JavaScript</span>
-                            <span>HTML</span>
-                            <span>CSS</span>
                         </div>
                     </div>
                 </div>
@@ -285,8 +285,8 @@
         <div class="aside-card">
             <h3 class="aside-title">Hobi</h3>
             <ul class="hobby-list">
-                <li>Bulutangkis</li>
-                <li>Bola</li>
+                <li>Travelling</li>
+                <li>Basket</li>
                 <li>Pemrograman</li>
                 <li>Gaming</li>
             </ul>
@@ -297,16 +297,16 @@
     <footer>
         <div class="footer-content">
             <div class="footer-left">
-                <p>Twitter: @akun</p>
-                <p>FB: @akun</p>
-                <p>Instagram: @akun</p>
+                <p>Twitter: @ray.mxa</p>
+                <p>FB: @ra.ymxa</p>
+                <p>Instagram: @ray.mxa</p>
             </div>
             <div class="footer-center">
-                <p>© Copyright 2020. All Rights Reserved</p>
+                <p>© Copyright 2025. All Rights Reserved</p>
             </div>
             <div class="footer-right">
-                <p><strong>NAMA WEB</strong></p>
-                <p>Slogan/Keterangan/Informasi Web</p>
+                <p><strong>Portofolio Arae</strong></p>
+                <p>Tidak ada kata menyerah</p>
             </div>
         </div>
     </footer>
