--- a/index.html
+++ b/index.html
@@ -283,12 +283,17 @@
     <!-- Aside Section -->
     <aside id="sidebar">
         <div class="aside-card">
-            <h3 class="aside-title">Hobi</h3>
+            <h3 class="aside-title">Hobi:</h3>
             <ul class="hobby-list">
-                <li>Travelling</li>
-                <li>Basket</li>
                 <li>Pemrograman</li>
                 <li>Gaming</li>
+                <li>Travelling</li>
+                <li>Basket</li>
+                <li>Singing</li>
+                <li>Design</li>
+                <li>Shopping</li>
+                <li>Walking</li>
+                <li>Bola</li>
             </ul>
         </div>
     </aside>
