--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="footer-content">
             <div class="footer-left">
                 <p>Twitter: @ray.mxa</p>
-                <p>FB: @ra.ymxa</p>
+                <p>FB: @ray.mxa</p>
                 <p>Instagram: @ray.mxa</p>
             </div>
             <div class="footer-center">
