--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     </div>
                     <div class="publication-card">
                         <div class="publication-header">
-                            <span class="publication-type">Auto Message Tele</span>
+                            <span class="publication-type">Auto Message</span>
                             <span class="publication-date">Oktober 2025</span>
                         </div>
                         <h3>Tools Bot Telegram Otomatis Mengirim Pesan</h3>
